gcp-not-production/devops/gitlab/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: devops
spec:
  ports:
    - port: 80
  selector:
    app: gitlab
